timetable: fix broken layout on large location name

--- a/widgets/timetable/timetable.scss
+++ b/widgets/timetable/timetable.scss
@@ -10,7 +10,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 // ----------------------------------------------------------------------------
 // Widget-comment styles
 // ----------------------------------------------------------------------------
-.widget-google-calendar {
+.widget-timetable {
 
   background-color: $background-color;
 
@@ -45,9 +45,14 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
   .location {
     float: left;
+    text-align: left;
     margin-left: 30px;
     font-weight: 600;
     font-size: 28px;
+    width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     text-transform: capitalize;
   }
 
